EcoTech.API/K8S/echotech-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: echotech-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echotechapiservice
  template:
    metadata:
      labels:
        app: echotechapiservice
    spec:
      containers:
        - name: echotechapiservice
          image: prashantadarade/echotech-api
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"       
              cpu: "500m"           
            limits:
              memory: "1Gi"      
              cpu: "1"  
---
apiVersion: v1
kind: Service
metadata: 
  name: echotech-api-clusterip
spec:
  type: ClusterIP
  selector:
    app: echotechapiservice
  ports:
   - name: echotechapiserviceclusterport
     protocol: TCP
     port: 8080
     targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: echotech-api-nodeport-service
spec:
  type: NodePort
  selector:
    app: echotechapiservice
  ports:
    - name: echotechapiservicenodeportport
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30002
