EcoTech.API/K8S/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echotech
  labels:
    name: echotech
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: local.echotech.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echotech-api-loadbalancer-service
            port: 
              number: 80
